2004-09-19  Andy Wingo  <wingo@pobox.com>

	* Makefile.am (pkgconfig_DATA): Install the pkg-config file.

2004-09-16  Andy Wingo  <wingo@pobox.com>

	* Makefile.am (SUBDIRS): Dist fixes.

	* NEWS: Added.

	* README: Added.

	* AUTHORS: Added.

	* gnome/gw/glade-support.[ch]: Removed these wayward support
	files.

	* pango-checks.ac: Check the right package.

	* atk-checks.ac: Check the right package.

	* gnome/gtk.scm: Avoid deprecated modules.

2004-09-15  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/gdk.defs (gdk-event->event-struct): Adapted to
	gdk-event->vector.

	* gnome/gtk/gdk-event.scm: Adapted to gdk-event->vector.

	* gnome/gw/gdk-support.c (gdk_event_to_vector): Renamed from
	gdk_event_to_event_struct, changed to return a vector instead of a
	custom struct.
	(gdk_event_to_vector): Add a case for GDK_MOTION_NOTIFY. No more
	irritating warnings about "events of type 3" blah blah...

2004-09-05  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/Makefile.am: Don't dist the C files.

	* gnome/Makefile.am, gnome/overrides/Makefile.am: Add overrides/
	to the dist.

	* gnome/overrides/gdk.defs, gnome/overrides/gtk.defs: Moved from
	the *-overrides.defs in the defs module.

	* gnome/gw/gdk-spec.scm, gnome/gw/gtk-spec.scm: Adapted to module
	location changes, load-defs changes.

	* gnome/contrib/Makefile.am: Add filtered-list.scm,
	delay-tree-model.scm, and help-browser.scm to the dist/install
	list.

	* defs-checks.ac: Added.

	* guile-gnome-gtk.pc.in, guile-gnome-gtk-uninstalled.pc.in: Moved
	from guile-gtk*.pc.in.

2004-09-04  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/Makefile.am: Add CFLAGS=-g, so that the user doesn't
	inadvertantly compile with optimizations.

2004-07-10  Andy Wingo  <wingo@pobox.com>

	* gnome/contrib/texinfo-buffer.scm (false-if-exception): New
	macro, like the standard one but doesn't affect the-last-stack.
	(tag-prop-alist): Add tags for entry-header, entry-body, and asis.
	(arg-ref): Use assq-ref.