@@ -7,5 +7,3 @@ PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 2.4.0, HAVE_GTK=true, HAVE_GTK=false)
 AC_SUBST(GTK_CFLAGS)
 AC_SUBST(GTK_LIBS)
 AM_CONDITIONAL(HAVE_GTK, $HAVE_GTK)
-
-AC_SUBST(GUILE_GTK_VERSION,2.3.99)
